fix: Fix scrollbar styles

--- a/client/src/components/Memberships/AddStep/AddStep.module.scss
+++ b/client/src/components/Memberships/AddStep/AddStep.module.scss
@@ -4,7 +4,6 @@
     max-height: 60vh;
     overflow-x: hidden;
     overflow-y: auto;
-    scrollbar-width: thin;
 
     &::-webkit-scrollbar {
       width: 5px;
